# FastAPI_Tutorials_and_Poetry

AI-Powered Content Generator/: .env  requirements.txt
AI-Powered Content Generator/backend/: main.py
AI-Powered Content Generator/powered_generator/: pyvenv.cfg
AI-Powered Content Generator/powered_generator/Scripts/: activate  activate.bat
Basic_FastAPI_Poetry/: README.md  main.py  pyproject.toml
E_Comerce_Mart_Project_FASTAPI_Nextjs/auth/: .env
E_Comerce_Mart_Project_FASTAPI_Nextjs/order/order/router/: item.py
Fast_API_Tutorial_Complete/: README.md
Fast_API_Tutorial_Complete/Basic_Introduction/: main.py
Fast_API_Tutorial_Complete/Cookie_And_Header/: main.py
Fast_API_Tutorial_Complete/Form_Field/: main.py
Fast_API_Tutorial_Complete/JWT_Security/: README.md  main.py
Fast_API_Tutorial_Complete/Nested_body/: main.py
Fast_API_Tutorial_Complete/Path_Parameter/: main.py
Fast_API_Tutorial_Complete/Query_Parameter/: main.py
Fast_API_Tutorial_Complete/Request_Body/: main.py
Fast_API_Tutorial_Complete/fast_api_tutorial/: pyvenv.cfg
Fast_API_Tutorial_Complete/fast_api_tutorial/Scripts/: activate  activate.bat
Fast_API_Virtual_Enviorment/: README.md  app.http  data.txt  db.py  db.sqlite  main.py  model.py  schemas.py
Fast_API_Virtual_Enviorment/venv-fastapi/: pyvenv.cfg
Fast_API_Virtual_Enviorment/venv-fastapi/Scripts/: activate  activate.bat
Project/backend/: main.py
Project/fast_api_project/: pyvenv.cfg
Project/fast_api_project/Scripts/: activate  activate.bat
Project/frontend/ai_resume/: package-lock.json  package.json
(+2 files in other folders)
