[tool.poetry]
name = "basic-fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["Muhammad Aqeel <104295133+Aqeel785@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
